force-app/main/default/objects/Dividend__c/Dividend__c.object-meta.xml
<CustomObject>
    <label>Dividend</label>
    <nameField>
        <displayFormat>DIV-{000000}</displayFormat>
        <label>Dividend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dividends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>