force-app/main/default/objects/Dividend__c/fields/Australian_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>Australian_Tax_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Australian Tax Paid</label>
    <type>Checkbox</type>
</CustomField>