force-app/main/default/objects/Dividend__c/fields/Book_Value_at_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Book_Value_at_Dividend__c</fullName>
    <label>Book Value at Dividend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>