force-app/main/default/objects/Dividend__c/fields/Dividend__c.field-meta.xml
<CustomField>
    <fullName>Dividend__c</fullName>
    <label>Dividend</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>