force-app/main/default/objects/Dividend__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <formula>IF(Book_Value_at_Dividend__c &gt; 0, Dividend__c /  Book_Value_at_Dividend__c , 0) *  Share_Class__r.No_Dividends_Annually__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>