force-app/main/default/objects/Dividend__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>&quot;(£&quot;  &amp;  TEXT(Dividend__c) &amp; &quot;) &quot; &amp; Share_Class__r.Name</formula>
    <label>Summary</label>
    <type>Text</type>
</CustomField>