force-app/main/default/objects/Dividend__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Share_Class__c</columns>
    <columns>Dividend__c</columns>
    <columns>Book_Value_at_Dividend__c</columns>
    <columns>Return__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>